# WMS_Core

./: .dockerignore  .env.example  .env.local  .env.local.example  .gitignore  .gitmodules  COMMIT_ANALYSIS.md  Dockerfile  MICROSERVICES_REFACTOR_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.phase9.yml  docker-compose.yml  double-check.md  pyproject.toml  requirement_render.txt  requirements.txt  run_all.py  secret.txt
Libraries/shared-utils/: pyproject.toml
Libraries/shared-utils/src/shared_utils/events/: __init__.py  publisher.py
Libraries/shared-utils/src/shared_utils/observability/: __init__.py  grpc.py  http.py
Services/ai-service/: .env.example  README.md  pyproject.toml
Services/ai-service/src/ai_engine/: README.md  __init__.py  requirements.txt
Services/ai-service/src/ai_engine/agents/: __init__.py  tools.py
Services/ai-service/src/ai_engine/config/: __init__.py  settings.py
Services/ai-service/src/ai_engine/core/: engine.py  question_analyzer.py
Services/ai-service/src/ai_engine/generation/: __init__.py  llm_generator.py  quality_evaluator.py
Services/ai-service/src/ai_engine/models/: base.py
Services/ai-service/src/ai_engine/retrieval/: __init__.py  hybrid_retriever.py
Services/ai-service/src/ai_engine/utils/: __init__.py  helpers.py  logger.py
Services/ai-service/src/ai_engine/workflows/: __init__.py  rag_workflow.py
Services/ai-service/src/ai_service/: __init__.py  app.py  event_consumer.py  grpc_server.py  grpc_servicer.py  main.py
Services/ai-service/src/ai_service/pipeline/: __init__.py  backend_query.py  generation.py  indexing.py  ingestion.py  providers.py  retrieval.py  routing.py  templates.py
Services/api-gateway/: .env.example  README.md  pyproject.toml
Services/api-gateway/src/api_gateway/: app.py  auth.py  authz.py  errors.py  grpc_clients.py  grpc_security.py  ingest_buffer.py  main.py  middleware.py  observability.py  permissions.py  presenters.py  routes.py  schemas.py
Services/audit-service/: .env.example  README.md  pyproject.toml
Services/audit-service/src/audit_service/: app.py  bootstrap.py  event_consumer.py  grpc_server.py  grpc_servicer.py  main.py
Services/customer-service/: .env.example  README.md  pyproject.toml
Services/customer-service/src/app/api/: api_deps.py  auth_deps.py
Services/customer-service/src/customer_service/: __init__.py  app.py  bootstrap.py  event_consumer.py  grpc_identity_client.py  grpc_server.py  grpc_servicer.py  main.py
Services/identity-service/: .env.example  README.md  pyproject.toml
Services/identity-service/src/app/api/: api_deps.py  auth_deps.py  security.py
Services/identity-service/src/identity_service/: app.py  bootstrap.py  grpc_server.py  grpc_servicer.py  main.py
Services/inventory-service/: .env.example  README.md  pyproject.toml
Services/inventory-service/migrations/: phase2_add_quantity_matrix.sql  phase4_add_stock_reservations.sql  phase9_add_inventory_transactions.sql
Services/inventory-service/src/inventory_service/: app.py  bootstrap.py  event_consumer.py  grpc_server.py  grpc_servicer.py  main.py
Services/reporting-service/: .env.example  README.md  pyproject.toml
Services/reporting-service/src/reporting_service/: app.py  bootstrap.py  event_consumer.py  grpc_server.py  grpc_servicer.py  main.py
Services/warehouse-service/: .env.example  README.md  pyproject.toml
Services/warehouse-service/src/app/api/: api_deps.py  auth_deps.py
Services/warehouse-service/src/warehouse_service/: app.py  bootstrap.py  grpc_identity_client.py  grpc_server.py  grpc_servicer.py  main.py
Services/wms-monolith/: .dockerignore  .env.example  ARCHIVE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest-safe  pytest.ini  requirements.txt  run_tests.sh  start.sh
Services/wms-monolith/alembic/: env.py
Services/wms-monolith/alembic/versions/: 79b57363cd69_initial_schema_v2.py
Services/wms-monolith/dashboard/: INTEGRATION_GUIDE.md  ai_engine_integration.py  index.html  package.json  rapid-switching-demo.html  script.js  styles.css  test-modal.html  test_persistent_ai.html
Services/wms-monolith/dashboard/tests/: e2e.spec.ts
Services/wms-monolith/lessons/gRPC/: client.py  guide.md  server.py
Services/wms-monolith/lessons/gRPC/generate/: robot_pb2.py  robot_pb2_grpc.py
Services/wms-monolith/lessons/gRPC/protos/: robot.proto
Services/wms-monolith/lessons/langchain/: lesson1.py  lesson10.py  lesson2.py  lesson3-2.py  lesson3.py  lesson4-2.py  lesson4.py  lesson5-2.py  lesson5.py  lesson6.py  lesson7.py  lesson8-2.py  lesson8.py  lesson9.py
Services/wms-monolith/scripts/: seed.py
Services/wms-monolith/src/ai_engine/: .env.example
Services/wms-monolith/src/ai_engine/agents/: wms_agent.py
Services/wms-monolith/src/ai_engine/core/: __init__.py
Services/wms-monolith/src/ai_engine/models/: __init__.py
Services/wms-monolith/src/ai_engine/retrieval/: document_processor.py
Services/wms-monolith/src/app/: main.py
Services/wms-monolith/src/app/api/: __init__.py  api_deps.py  auth_deps.py  grpc_customer_client.py  grpc_identity_client.py  grpc_product_client.py  grpc_warehouse_client.py  middleware.py  service_proxy.py
Services/wms-monolith/src/data/: README.md  __init__.py
Services/wms-monolith/src/data/logs/: README.md  (+2 more)
Services/wms-monolith/tests/: .env.test  QUICK_TEST_RUN.md  RUN_TESTS.md  conftest.py
Services/wms-monolith/tests/api/: test_pre_merge.py
Services/wms-monolith/tests/contracts/: run_schemathesis.sh
Services/wms-monolith/tests/functional/: test_warehouse_operations.py
Services/wms-monolith/tests/integration/: test_document_workflows.py  test_feature_completion.py  test_product_workflows.py  test_simple_integration.py  test_warehouse_workflows.py
Services/wms-monolith/tests/mocks/: models.py
Services/wms-monolith/tests/refactor_guard/: README.md  run_refactor_guard.sh  test_refactor_guard.py
Services/wms-monolith/tests/security/: test_authentication_authorization.py  test_jwt.py  test_rbac.py  test_sql_injection.py
Services/wms-monolith/tests/unit/: test_continuous_unit.py
(+441 files in other folders)
