[project]
name = "wms-microservices"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tests/contract/*.py" = ["E402"]
"tests/e2e/*.py" = ["E402"]

[tool.uv.workspace]
members = [
  "Libraries/shared-utils",
  "Services/ai-service",
  "Services/api-gateway",
  "Services/audit-service",
  "Services/customer-service",
  "Services/documents-service",
  "Services/identity-service",
  "Services/inventory-service",
  "Services/product-service",
  "Services/reporting-service",
  "Services/warehouse-service",
]

[tool.uv.sources]
ai-service = { workspace = true }
api-gateway = { workspace = true }
audit-service = { workspace = true }
customer-service = { workspace = true }
documents-service = { workspace = true }
identity-service = { workspace = true }
inventory-service = { workspace = true }
product-service = { workspace = true }
reporting-service = { workspace = true }
shared-utils = { workspace = true }
warehouse-service = { workspace = true }
