[project]
name = "WMS"
version = "0.1.0"
description = "A WMS project for learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.3.0",
    "faker>=24.0.0",
    "sqlparse>=0.4.4",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pathlib2>=2.3.7",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "alembic>=1.18.4",
    "redis>=7.4.0",
    "ruff>=0.1.0",
    "grpcio-tools>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "Libraries/shared-utils",
    "Services/api-gateway",
    "Services/audit-service",
    "Services/customer-service",
    "Services/documents-service",
    "Services/identity-service",
    "Services/inventory-service",
    "Services/product-service",
    "Services/reporting-service",
    "Services/warehouse-service",
]

[tool.uv.sources]
shared-utils = { workspace = true }
