[project]
name = "shared-utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pyjwt>=2.8.0",
  "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_utils"]

[tool.hatch.build.targets.editable]
packages = ["src/shared_utils"]
