[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "grpcio>=1.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service", "src/ai_engine"]

[tool.hatch.build.targets.editable]
packages = ["src/ai_service", "src/ai_engine"]
