[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "chromadb>=0.4.0",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "grpcio>=1.80.0",
  "protobuf>=6.31.1",
  "langchain>=0.1.0",
  "langchain-chroma>=0.1.0",
  "langchain-classic>=0.0.1",
  "langchain-community>=0.0.20",
  "langchain-core>=0.1.0",
  "langchain-groq>=0.1.0",
  "langchain-text-splitters>=0.0.1",
  "langgraph>=0.0.20",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "rank-bm25>=0.2.2",
  "transformers>=4.36.0",
  "torch>=2.11.0",
  "peft>=0.13.0",
  "accelerate>=0.34.0",
  "sentence-transformers>=2.2.0",
  "shared-utils",
  "sqlalchemy>=2.0.0",
  "structlog>=23.0.0",
  "typing-extensions>=4.5.0",
]

[project.scripts]
ai-grpc = "ai_service.main:main_grpc"
ai-http = "ai_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service", "src/ai_engine"]

[tool.hatch.build.targets.editable]
packages = ["src/ai_service", "src/ai_engine"]
