[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "grpcio>=1.80.0",
  "protobuf>=6.31.1",
  "shared-utils",
]

[project.scripts]
api-gateway = "api_gateway.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]

[tool.hatch.build.targets.editable]
packages = ["src/api_gateway"]
