[project]
name = "identity-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "grpcio>=1.80.0",
  "grpcio-tools>=1.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_service", "src/app"]

[tool.hatch.build.targets.editable]
packages = ["src/identity_service", "src/app"]
