[project]
name = "reporting-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "grpcio>=1.80.0",
  "protobuf>=6.31.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.0",
  "bcrypt>=5.0.0",
  "pyjwt>=2.8.0",
  "shared-utils",
]

[project.scripts]
reporting-grpc = "reporting_service.main:main_grpc"
reporting-http = "reporting_service.main:main"
reporting-migrate = "reporting_service.bootstrap:migrate"
reporting-fixtures = "reporting_service.bootstrap:fixtures"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporting_service", "src/app"]

[tool.hatch.build.targets.editable]
packages = ["src/reporting_service", "src/app"]
