[project]
name = "warehouse-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "grpcio>=1.80.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "sqlalchemy>=2.0.0",
  "bcrypt>=5.0.0",
  "pyjwt>=2.8.0",
  "shared-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warehouse_service", "src/app"]

[tool.hatch.build.targets.editable]
packages = ["src/warehouse_service", "src/app"]
